--- a/src/main/webapp/test.html
+++ b/src/main/webapp/test.html
@@ -15,7 +15,7 @@
   <link href="css/animate.min.css" rel="stylesheet">
   <!-- Custom styling plus plugins -->
   <link href="css/custom.css" rel="stylesheet">
-  <script type="text/javascript" src="js/jslib/jquery.min.js"></script>
+  <script type="text/javascript" src="js/jslibs/jquery.min.js"></script>
  <!--  <script src="js/jslib/jquery.min.js"></script> -->
   <!-- <script src="js/require.js"></script> -->
   <!--[if lt IE 9]>
